<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="12dp"
    android:paddingEnd="12dp"
    android:paddingBottom="12dp"
    android:paddingStart="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <TextView
        android:id="@+id/clock_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/independence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/clock_d" />

    <TextView
        android:id="@+id/partly_cloudy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/independence"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/day_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clock_d"
        tools:text="@string/partly_cloudy" />

    <TextView
        android:id="@+id/day_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textColor="@color/independence"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/additional_info"
        app:layout_constraintTop_toBottomOf="@id/partly_cloudy"
        tools:text="@string/day_info" />

    <TextView
        android:id="@+id/clock_temper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/independence"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginEnd="13dp"
        app:layout_constraintBottom_toBottomOf="@id/cloud_sun"
        app:layout_constraintEnd_toStartOf="@id/cloud_sun"
        app:layout_constraintTop_toTopOf="@id/cloud_sun"
        tools:text="@string/clock_temper" />

    <ImageView
        android:id="@+id/cloud_sun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/additional_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_hourly_sun" />


    <TextView
        android:id="@+id/additional_info"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="6dp"
        android:textColor="@color/independence"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/cloud_sun"
        app:layout_constraintTop_toTopOf="@id/day_info"
        tools:text="@string/additional_info" />
</androidx.constraintlayout.widget.ConstraintLayout>


